<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCE0EE">

    <Button
        android:id="@+id/expensesButtonAdd"
        android:layout_width="141dp"
        android:layout_height="56dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#42B8D4"
        android:contentDescription="@string/add"
        android:fontFamily="monospace"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expensesTvTitle"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/expensesImgLogo"
        android:layout_width="187dp"
        android:layout_height="84dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homehub"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/expensesTvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="7dp"
        android:fontFamily="monospace"
        android:text="@string/EXPENSES_LIST"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expensesImgLogo" />

    <TextView
        android:id="@+id/expensesTvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="11dp"
        android:fontFamily="monospace"
        android:text="@string/TOTAL"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expensesButtonAdd" />

    <TextView
        android:id="@+id/expensesTvQuantity"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="14dp"
        android:fontFamily="monospace"
        android:text="@string/xx"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/expensesTvTotal"
        app:layout_constraintTop_toBottomOf="@+id/expensesButtonAdd"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/expensesTvMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="79dp"
        android:fontFamily="monospace"
        android:text="@string/money"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/expensesTvQuantity"
        app:layout_constraintTop_toBottomOf="@+id/expensesTvTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expensesRecyclerView"
        android:layout_width="377dp"
        android:layout_height="424dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expensesTvMoney" />
</androidx.constraintlayout.widget.ConstraintLayout>