<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCE0EE"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-22dp">

    <ImageView
        android:id="@+id/recoverImgEmail"
        android:layout_width="43dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoverImgLogo"
        app:srcCompat="@drawable/usuario_removebg_preview" />

    <TextView
        android:id="@+id/recoverTvInsertEmail"
        android:layout_width="329dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="26dp"
        android:fontFamily="monospace"
        android:text="@string/insert_your_email_to_receive_a_password_recovery_email"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoverImgEmail"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/recoverImgLogo"
        android:layout_width="331dp"
        android:layout_height="176dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homehub" />

    <Button
        android:id="@+id/recoverBtnLogOut"
        android:layout_width="329dp"
        android:layout_height="91dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="97dp"
        android:backgroundTint="#42B8D4"
        android:fontFamily="monospace"
        android:text="@string/send"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoverTvInsertEmail" />

    <ImageView
        android:id="@+id/recoverImgBack"
        android:layout_width="139dp"
        android:layout_height="81dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoverBtnLogOut"
        app:srcCompat="@drawable/goback" />

    <EditText
        android:id="@+id/recoverEtEmail"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:background="#42B8D4"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/recoverImgEmail"
        app:layout_constraintTop_toBottomOf="@+id/recoverImgLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>